--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     </form>
     <div id="results"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="application.js"></script>
+    <!-- <script>
+      const app = new Vue({
+        el: '#search-film-input',
+        data: {
+
+        }
+      })
+    </script> -->
   </body>
 </html>
