--- a/teste-front-end/public/index.html
+++ b/teste-front-end/public/index.html
@@ -15,5 +15,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="application.js"></script>
   </body>
 </html>
